# GPT-discord-bot

./: Cargo.toml  Readme.md
src/: main.rs
