[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
